[package]
name = "basilica-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Basilica Team"]
description = "SDK for interacting with the Basilica GPU rental network"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# OpenAPI support (optional)
utoipa = { workspace = true, optional = true }

# Auth dependencies (moved from CLI)
oauth2 = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
etcetera = { workspace = true }
webbrowser = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }

# Internal dependencies
basilica-common = { path = "../basilica-common" }
basilica-validator = { path = "../basilica-validator", features = ["client", "openapi"] }
urlencoding = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
openapi = ["utoipa"]
client = []
