[package]
name = "collateral-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "collateral_contract"
path = "src/lib.rs"

[[bin]]
name = "collateral-cli"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-contract = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
subxt = { workspace = true }
subxt-signer = { workspace = true }
bittensor = { path = "../bittensor" }
