[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
sha2 = "0.10"
tempfile = "3.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
num_cpus = "1.16"
prost-types = { workspace = true }
dirs = "5.0"
rand = { workspace = true }
rust_decimal = "1.32"
url = "2.4"

# Internal dependencies
basilica-validator = { path = "../basilica-validator" }
basilica-miner = { path = "../basilica-miner" }
basilica-executor = { path = "../basilica-executor" }
basilica-protocol = { path = "../basilica-protocol" }
basilica-common = { path = "../basilica-common" }
uuid = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
sqlx = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "miner_executor_flow"
path = "tests/miner_executor_flow.rs"

[[test]]
name = "bdd_payment_billing_flow"
path = "tests/bdd_payment_billing_flow.rs"

# CLI binaries for manual testing and production smoke tests
[[bin]]
name = "scenario_wallet_create"
path = "payments/scenario_wallet_create.rs"

[[bin]]
name = "scenario_deposits_list"
path = "payments/scenario_deposits_list.rs"

[[bin]]
name = "scenario_balance_check"
path = "billing/scenario_balance_check.rs"

[[bin]]
name = "scenario_credits_apply"
path = "billing/scenario_credits_apply.rs"
