[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
prost-types = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
url = { workspace = true }

# Internal dependencies
basilica-validator = { path = "../basilica-validator" }
basilica-miner = { path = "../basilica-miner" }
basilica-executor = { path = "../basilica-executor" }
basilica-protocol = { path = "../basilica-protocol" }
basilica-common = { path = "../basilica-common" }
uuid = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
sqlx = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[test]]
name = "miner_executor_flow"
path = "tests/miner_executor_flow.rs"

[[test]]
name = "bdd_payment_billing_flow"
path = "tests/bdd_payment_billing_flow.rs"

# CLI binaries for manual testing and production smoke tests
[[bin]]
name = "scenario_wallet_create"
path = "payments/scenario_wallet_create.rs"

[[bin]]
name = "scenario_deposits_list"
path = "payments/scenario_deposits_list.rs"

[[bin]]
name = "scenario_balance_check"
path = "billing/scenario_balance_check.rs"

[[bin]]
name = "scenario_credits_apply"
path = "billing/scenario_credits_apply.rs"
